--- a/package.json
+++ b/package.json
@@ -6,19 +6,31 @@
   "scripts": {
     "start": "concurrently \"npm run backend\" \"npm run frontend\"",
     "frontend": "cd frontend && npm start",
-    "backend": "./gradlew bootRun",
+    "backend": "cross-os backend",
+    "backend:windows": "gradlew.bat bootRun",
+    "backend:unix": "./gradlew bootRun",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
-    "build:backend": "./gradlew build",
+    "build:backend": "cross-os build-backend",
+    "build-backend:windows": "gradlew.bat build",
+    "build-backend:unix": "./gradlew build",
     "install:all": "npm install && cd frontend && npm install",
-    "clean": "./gradlew clean && cd frontend && rm -rf node_modules build",
+    "clean": "cross-os clean",
+    "clean:windows": "gradlew.bat clean && cd frontend && rmdir /s /q node_modules build 2>nul || echo Cleanup completed",
+    "clean:unix": "./gradlew clean && cd frontend && rm -rf node_modules build",
     "dev": "concurrently --names \"BACKEND,FRONTEND\" --prefix-colors \"blue,green\" \"npm run backend\" \"npm run frontend\"",
     "test": "npm run test:backend && npm run test:frontend",
-    "test:backend": "./gradlew test",
-    "test:frontend": "cd frontend && npm test"
+    "test:backend": "cross-os test-backend",
+    "test-backend:windows": "gradlew.bat test",
+    "test-backend:unix": "./gradlew test",
+    "test:frontend": "cd frontend && npm test",
+    "setup": "cross-os setup",
+    "setup:windows": "start-dev.bat",
+    "setup:unix": "./start-dev.sh"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "cross-os": "^1.5.0"
   },
   "workspaces": [
     "frontend"
